# Heretic2RLinux

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  LINUX_PORT_CHANGES_v2.md  LINUX_PORT_README.md  README.md
include/compat/: win_compat.c  win_compat.h
src/H2Common/src/: ByteOrder.c  Common.c  Console.c  Console.h  DllMain.c  InfoStrings.c  Math.c  Matrix.c  Motion.c  Random.c  ResourceManager.c  SinglyLinkedList.c  SurfaceProps.c  TextPalette.c  Vector.c  q_Physics.c
src/Player/src/: Player.h  p_actions.c  p_actions.h  p_anim_branch.c  p_anim_branch.h  p_anim_data.c  p_anim_data.h  p_animactor.c  p_animactor.h  p_anims.c  p_anims.h  p_chicken.c  p_chicken.h  p_chicken_anim.c  p_items.c  p_items.h  p_main.c  p_main.h  p_types.h  p_utility.c  p_utility.h  p_weapon.c  p_weapon.h
src/client effects/src/: ce_DLight.c  ce_DLight.h  ce_DefaultMessageHandler.c  ce_DefaultMessageHandler.h  ce_Effects.c  ce_Effects.h  ce_Entities.c  ce_Entities.h  ce_LevelMaps.c  ce_LightStyles.c  ce_LightStyles.h  ce_Main.c  ce_Message.c  ce_Message.h  ce_Particles.c  ce_Particles.h  ce_Utilities.c  ce_Utilities.h
src/client effects/src/Effects/: fx_AnimatedModel.c  fx_ArmorHit.c  fx_BarrelExplode.c  fx_Blood.c  fx_Blood.h  fx_CorpseRemove.c  fx_Debris.c  fx_Debris.h  fx_Dust.c  fx_DustPuff.c  fx_DustPuff.h  fx_Explosion.c  fx_Fire.c  fx_Flamethrower.c  fx_Flamethrower.h  fx_Fountain.c  fx_GibTrail.c  fx_Halo.c  fx_HitPuffs.c  fx_LensFlare.c  fx_Lightning.c  fx_LightningHit.c  fx_Mist.c  fx_Portal.c  fx_Quake.c  fx_Rope.c  fx_ScorchMark.c  fx_Shadow.c  fx_Shrine.c  fx_Smoke.c  fx_Smoke.h  fx_Sound.c  fx_Sparks.c  fx_Sparks.h  fx_Teleport.c  fx_TestBBox.c
src/game/src/: Game.h  g_ClassStatics.c  g_ClassStatics.h  g_Combat.c  g_Combat.h  g_Decals.c  g_Decals.h  g_DefaultMessageHandler.c  g_DefaultMessageHandler.h  g_Edict.h  g_HitLocation.c  g_HitLocation.h  g_ItemStats.h  g_Items.c  g_Items.h  g_Local.h  g_Main.c  g_Main.h  g_Message.c  g_Message.h  g_PlayStats.h  g_Skeleton.h  g_Skeletons.c  g_Skeletons.h  g_Spawn.c  g_SpawnFuncs.c  g_SpawnFuncs.h  g_Utilities.c  g_Utilities.h  g_Utils.c  q_Shared.c  q_Shared.h
src/game/src/Cinematics/: c_AI.c  c_AI.h  c_Actors.h
src/game/src/Commands/: g_ClientCommands.c  g_ClientCommands.h  g_ServerCommands.c
src/game/src/GameObjects/: g_BreakableBrush.c  g_BreakableBrush.h  g_Debris.c  g_Debris.h  g_Env.c  g_Env.h  g_Field.c  g_Field.h  g_Flamethrower.c  g_Flamethrower.h  g_Light.c  g_Light.h  g_Misc.c  g_Misc.h  g_MorcalavinBarrier.c  g_MorcalavinBarrier.h  g_Obj.c  g_Obj.h  g_Rope.c  g_Rope.h  g_Shrine.c  g_Shrine.h  g_ShrineLocal.h  g_Target.c  g_Target.h  g_Trigger.c  g_Trigger.h  g_WaterEffects.c  g_WaterEffects.h  g_func_Button.c  g_func_Button.h  g_func_Door.c  g_func_Door.h  g_func_MonsterSpawner.c  g_func_MonsterSpawner.h  g_func_Plat.c  g_func_Plat.h  g_func_Rotating.c  g_func_Rotating.h  g_func_Timer.c  (+5 more)
src/game/src/Monsters/: g_AI.c  g_AI.h  g_AI_local.h  g_Monster.c  g_Monster.h  m_Monsters.h  m_Move.c  m_Move.h  m_Stats.c  m_Stats.h
src/game/src/NavSys/: mg_AI.c  mg_AI.h  mg_Buoy.c  mg_Buoy.h  mg_Guide.c  mg_Guide.h
src/game/src/Physics/: g_Physics.c  g_Physics.h  g_PhysicsLocal.h  g_PhysicsQ2.c
src/game/src/Player/: m_Player.h  p_Client.c  p_Client.h  p_Funcs.c  p_Funcs.h  p_HUD.c  p_HUD.h  p_Items.c  p_Items.h  p_Morph.c  p_Morph.h  p_Teleport.c  p_Teleport.h  p_View.c  p_View.h  p_Weapons.c  p_Weapons.h
src/game/src/Saving/: g_Save.c  g_Save.h  g_SaveDefs.c
src/game/src/Scripting/: sc_CScript.cpp  sc_CScript.h  sc_FieldDef.cpp  sc_FieldDef.h  sc_Main.cpp  sc_Main.h  sc_Pcode.h  sc_Signaler.cpp  sc_Signaler.h  sc_Utility.cpp  sc_Utility.h
src/game/src/SpellsDefensive/: spl_LightningShield.c  spl_LightningShield.h  spl_MeteorBarrier.c  spl_MeteorBarrier.h  spl_MorphOvum.c  spl_MorphOvum.h  spl_RingOfRepulsion.c  spl_RingOfRepulsion.h  spl_Teleport.c  spl_Teleport.h  spl_TomeOfPower.c  spl_TomeOfPower.h  spl_Tornado.c  spl_Tornado.h
src/game/src/SpellsOffensive/: spl_FireWall.c  spl_FireWall.h  spl_Fireball.c  spl_Fireball.h  spl_HellStaff.c  spl_HellStaff.h  spl_Maceball.c  spl_Maceball.h  spl_MagicMissile.c  spl_MagicMissile.h  spl_Phoenix.c  spl_Phoenix.h  spl_RedRain.c  spl_RedRain.h  spl_Ripper.c  spl_Ripper.h  spl_SphereOfAnnihilation.c  spl_SphereOfAnnihilation.h  spl_ThunderBlast.c  spl_ThunderBlast.h
src/launcher/: resource.h
src/launcher/src/: main.c  main_linux.c
src/qcommon/: Angles.h  ArrayedList.h  Debug.h  EffectFlags.h  FX.h  FlexModel.h  GenericUnions.h  H2Common.h  Heretic2.h  Matrix.h  Message.c  Message.h  Motion.h  ParticleFlags.h  Random.h  Reference.c  Reference.h  ResourceManager.h  SinglyLinkedList.h  Skeletons.c  Skeletons.h  SurfaceProps.h  Vector.h  ce_LevelMaps.h  cl_strings.h  items.h  netmsg_read.c  netmsg_write.c  p_dll.c  p_dll.h  q_ClientServer.h  q_Physics.h  q_Surface.h  q_Typedef.h  qcommon.h  qfiles.h  turbsin.c  turbsin.h
src/quake2/src/client/: cl_camera.c  cl_camera.h  cl_demo.c  cl_effects.c  cl_effects.h  cl_entities.c  cl_input.c  cl_inventory.c  cl_main.c  cl_messages.c  cl_messages.h  cl_parse.c  cl_player.c  cl_prediction.c  cl_screen.c  cl_skeletons.c  cl_skeletons.h  cl_smk.c  cl_view.c  client.h  console.c  console.h  glimp_sdl3.c  glimp_sdl3.h  input.h  input_sdl3.c  keys.c  keys.h  menu.c  menu.h  ref.h  screen.h  vid.h
src/quake2/src/cs_shared/: Debug.c  cmd.c  cmodel.c  cmodel.h  cmodel_private.h  common.c  cvar.c  files.c  pmove.c  (+3 more)
src/ref_gl1/src/: Hunk.c  gl1_Debug.c  gl1_Debug.h  gl1_Draw.c  gl1_Draw.h  gl1_DrawBook.c  gl1_DrawBook.h  gl1_DrawCinematic.c  gl1_DrawCinematic.h  gl1_FindSurface.c  gl1_FindSurface.h  gl1_FlexModel.c  gl1_Image.c  gl1_Image.h  gl1_Light.c  gl1_Lightmap.c  gl1_Local.h  gl1_Main.c  gl1_Matrix4.c  gl1_Matrix4.h  gl1_Misc.c  gl1_Misc.h  gl1_Model.c  gl1_Model.h  gl1_SDL.c  gl1_SDL.h  gl1_Sky.c  gl1_Sky.h  gl1_Surface.c  gl1_Warp.c
src/snd_sdl3/src/: snd_LowpassFilter.c  snd_LowpassFilter.h  snd_local.h  snd_main.c  snd_main.h  snd_ogg.c  snd_ogg.h  snd_sdl3.c  snd_sdl3.h  snd_wav.c  snd_wav.h
stuff/: Heretic_II_Patch_106_for_H2R.txt
(+348 files in other folders)
